[package]
name = "qweazsxdc"
version = "0.2.0"
edition = "2021"
description = "A simple, fast, and safe qweazsxdc"
authors = ["Sadık Kuzu <sadikkuzu@hotmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sadikkuzu/sadikkuzu.rs"
repository = "https://github.com/sadikkuzu/sadikkuzu.rs"
keywords = ["cli", "personal", "sadikkuzu"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
